# bootcamp-python

aula_01/: main.py
aula_02/: main.py
aula_03/: main.py
aula_04/: arquivos.py  exercise.py  functions.py  main.py  product_list.py
aula_04/files/: products.csv
aula_09/: etl.py  log_ex_error.py  pyproject.toml  sum_example.py  utils_log.py
aula_11/: csv_class.py  csv_testing.py  exemplo.csv  pyproject.toml
aula_11/source/: use_class.py
aula_11/source/data/: exemplo.csv
aula_11/source/interface/classes/: csv_class.py
aula_12/: exemplo_csv.py  pyproject.toml  use_class.py
aula_12/data/: exemplo.csv
aula_12/src/interface/classes/: exemplo_csv_class.py
aula_13/: generate_products.py  pyproject.toml  pyrightconfig.json  start.py
aula_13/data/: products.csv
aula_16/: database.db  main.py  pyproject.toml
aula_17/: exemplo_01.py  meubanco.db  pyproject.toml
aula_17_desafio/: desafio.db  desafio.py  desafio_query.py  pyproject.toml
