[project]
name = "aula-13"
version = "0.1.0"
description = ""
authors = [
    {name = "gsfreitas",email = "gfreitas322@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake (>=0.8,<0.9)",
    "faker (>=40.1.0,<41.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
