[project]
name = "sql"
version = "0.1.0"
description = "aulas relacionadas a SQL e operações CRUD"
authors = [
    {name = "gsfreitas",email = "gfreitas322@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
