[project]
name = "sql"
version = "0.1.0"
description = "aulas relacionadas a SQL e operações CRUD"
authors = [
    {name = "gsfreitas",email = "gfreitas322@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
